// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`MobileIcon renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M3 7h24v35H3z",
        "fill": "#fff",
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M8.864 5.5A5.867 5.867 0 0 0 3 11.364v26.182a5.867 5.867 0 0 0 5.864 5.863h15.272A5.867 5.867 0 0 0 30 37.546V11.364A5.867 5.867 0 0 0 24.136 5.5H8.864Zm1.5 7.364h12.272v18.818H10.364V12.864Z",
        "fill": "#3EA45C",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M14.622 37.249h3.768a.789.582 0 0 1 .789.582.789.582 0 0 1-.789.581h-3.779a.789.582 0 0 1-.789-.581.8.582 0 0 1 .8-.582Z",
        "fill": "#fff",
        "stroke": "#fff",
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 33,
    "viewBox": "0 0 33 45",
    "width": 30,
  },
  "type": "Svg",
}
`;

exports[`MobileIcon renders with doNotDisturb indicator 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M3 7h24v35H3z",
        "fill": "#fff",
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M8.864 5.5A5.867 5.867 0 0 0 3 11.364v26.182a5.867 5.867 0 0 0 5.864 5.863h15.272A5.867 5.867 0 0 0 30 37.546V11.364A5.867 5.867 0 0 0 24.136 5.5H8.864Zm1.5 7.364h12.272v18.818H10.364V12.864Z",
        "fill": "#3EA45C",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M14.622 37.249h3.768a.789.582 0 0 1 .789.582.789.582 0 0 1-.789.581h-3.779a.789.582 0 0 1-.789-.581.8.582 0 0 1 .8-.582Z",
        "fill": "#fff",
        "stroke": "#fff",
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M21 4h8l-8 6.857h8",
        "stroke": "#fff",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 8,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M21 4h8l-8 6.857h8",
        "stroke": "#3EA45C",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 33,
    "viewBox": "0 0 33 45",
    "width": 30,
  },
  "type": "Svg",
}
`;

exports[`MobileIcon accepts custom props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M3 7h24v35H3z",
        "fill": "#fff",
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M8.864 5.5A5.867 5.867 0 0 0 3 11.364v26.182a5.867 5.867 0 0 0 5.864 5.863h15.272A5.867 5.867 0 0 0 30 37.546V11.364A5.867 5.867 0 0 0 24.136 5.5H8.864Zm1.5 7.364h12.272v18.818H10.364V12.864Z",
        "fill": "#3EA45C",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M14.622 37.249h3.768a.789.582 0 0 1 .789.582.789.582 0 0 1-.789.581h-3.779a.789.582 0 0 1-.789-.581.8.582 0 0 1 .8-.582Z",
        "fill": "#fff",
        "stroke": "#fff",
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 50,
    "viewBox": "0 0 33 45",
    "width": 45,
  },
  "type": "Svg",
}
`;
